--- a/Runtime/com.ai-rule-system.Runtime.asmdef
+++ b/Runtime/com.ai-rule-system.Runtime.asmdef
@@ -1,15 +1,3 @@
 {
-    "name": "com.ai-rule-system.Runtime",
-    "rootNamespace": "",
-    "references": [
-    ],
-    "includePlatforms": [],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+	"name": "com.ai-rule-system.Runtime"
 }
