--- a/Runtime/com.ai-rule-system.Runtime.asmdef
+++ b/Runtime/com.ai-rule-system.Runtime.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "com.ai-rule-system.Runtime"
+    "name": "com.ai-rule-system.Editor",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
