--- a/Runtime/com.ai-rule-system.Runtime.asmdef
+++ b/Runtime/com.ai-rule-system.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.ai-rule-system.Editor",
+    "name": "com.ai-rule-system.Runtime",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
