--- a/Editor/com.ai-rule-system.Editor.asmdef
+++ b/Editor/com.ai-rule-system.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:1181cb6c0c5cc954eba8a0fa110e0e76"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
