--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.adelic.ai-rule-system",
-  "version": "1.0.2",
+  "version": "1.0.2f1",
   "displayName": "AI Rule System",
   "description": "",
   "dependencies": {}
