--- a/Runtime/com.ai-rule-system.Runtime.asmdef
+++ b/Runtime/com.ai-rule-system.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "com.ai-rule-system.Runtime",
-    "rootNamespace": "AdelicSystem.RuleAI",
+    "name": "com.ai-rule-sytem.Runtime",
+    "rootNamespace": "AdelicSystems.RuleAI",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
